EDSC-2548: Fixing word break in granule titles

--- a/static/src/js/components/GranuleResultsHighlights/GranuleResultsHighlights.scss
+++ b/static/src/js/components/GranuleResultsHighlights/GranuleResultsHighlights.scss
@@ -25,6 +25,7 @@
     margin: 0;
     font-weight: 300;
     font-size: 0.825rem;
+    word-break: break-all;
   }
 
   &__item-body {
